--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'AwesomeProject'
+include ':react-native-svg'
+project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 
 include ':app'
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
