--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
+    "haversine": "^1.1.0",
     "mongoose": "^5.3.9",
     "react": "16.3.0-alpha.1",
     "react-native": "^0.54.0",
+    "react-native-maps": "^0.22.1",
     "react-native-router-flux": "^4.0.5",
     "react-native-svg": "^8.0.8",
     "victory-native": "^0.17.1"
