--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^5.3.0",
     "haversine": "^1.1.0",
     "mongoose": "^5.3.9",
+    "native-base": "^2.8.1",
     "react": "16.3.0-alpha.1",
     "react-native": "^0.54.0",
     "react-native-maps": "^0.22.1",
