--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.0.0-beta.47",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^6.1.0",
@@ -21,8 +21,8 @@
     "haversine": "^1.1.0",
     "mongoose": "^5.3.9",
     "native-base": "^2.8.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "^0.54.0",
+    "react": "^16.4.1",
+    "react-native": "^0.56.0",
     "react-native-maps": "^0.22.1",
     "react-native-router-flux": "^4.0.5",
     "react-native-svg": "^8.0.8",
